# fastapi-noteapp-example

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile
src/: pyproject.toml  worker.py
src/app/: bootstrap.py  config.py  main.py
src/app/controllers/: status.py
src/app/exceptions/: definitions.py
src/app/middlewares/: benchmark.py  identify.py
src/app/models/: base_model.py  mixins.py
src/app/utils/: strings.py
src/tests/: test_app.py
