[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = "An api example for a note app."
authors = ["Ariel Carvajal <arie.cbpro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# proces management
gunicorn = "^20.0.4"

# server
uvicorn = "^0.13.3"
uvloop = "^0.14.0"
httptools = "^0.1.1"

# framework
fastapi = "^0.63.0"

# database
SQLAlchemy = "^1.3.22"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
hypothesis = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
