[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = "An api example for a note app."
authors = ["Ariel Carvajal <arie.cbpro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# proces management
gunicorn = "^20.0.4"

# server
uvicorn = "^0.13.3"
uvloop = "^0.14.0"
httptools = "^0.1.1"

# web framework
fastapi = "^0.63.0"
starlette = "^0.13.6"
pydantic = "^1.7.3"

# database
sqlalchemy = "^1.3.22"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
# tests
pytest = "^6.2.1"
hypothesis = "^6.0.3"
coverage = "^5.4"

# code quality
flake8 = "^3.8.4"
mypy = "^0.800"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
