[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = "An api example for a note app."
authors = ["Ariel Carvajal <arie.cbpro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# server
hypercorn = {extras = ["uvloop"], version = "^0.11.2"}
uvloop = "^0.14.0"

# web framework
fastapi = "^0.63.0"
starlette = "^0.13.6"
pydantic = "^1.7.3"

# database
sqlalchemy = { version = "^1.4.0b1", allow-prereleases = true }
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
# tests
pytest = "^6.2.1"
hypothesis = "^6.1.0"
coverage = "^5.4"

# code quality
flake8 = "^3.8.4"
mypy = "^0.800"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
